--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(img/bg.jpg);
+    background-image: url(bg.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
